# Cerebrun

./: .env.example  .replit  Cargo.toml  README.md  github_push.py  replit.md
attached_assets/: Pasted-1-G-venlik-ve-API-Anahtar-Y-netimi-Core-Security-Bu-sis_1771695764469.txt  Pasted-User-MCP-User-Context-MCP-Server-Technical-Specificatio_1771425721480.txt
migrations/: 001_initial.sql  002_llm_gateway.sql  003_knowledge_base.sql  004_vector_embeddings.sql  005_system_tables.sql
src/: config.rs  error.rs  main.rs
src/api/: admin.rs  audit.rs  keys.rs  knowledge.rs  layers.rs  llm.rs  mod.rs  vault.rs
src/auth/: api_key.rs  mod.rs  oauth.rs  session.rs
src/crypto/: hash.rs  mod.rs  vault.rs
src/db/: api_keys.rs  audit.rs  conversations.rs  embeddings.rs  knowledge.rs  layers.rs  llm_keys.rs  llm_usage.rs  mod.rs  pool.rs  system.rs  users.rs  vault.rs
src/llm/: mod.rs  pricing.rs  provider.rs
src/mcp/: server.rs  tools.rs
src/models/: api_key.rs  context.rs  knowledge.rs  llm.rs  mod.rs  system.rs  user.rs
static/dashboard/: chat.html  index.html
